// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main children is defined renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(CssBaseline) />
  <WithStyles(Header)
    handleDrawerOpen={[Function]}
    hasSidebar={false}
    isSidebarOpen={false}
    leftContent={null}
    rightContent={null}
  />
  <main
    className=""
  >
    <div
      className=""
    />
    <child>
      some child
    </child>
  </main>
</div>
`;

exports[`Main default values renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(CssBaseline) />
  <WithStyles(Header)
    handleDrawerOpen={[Function]}
    hasSidebar={false}
    isSidebarOpen={false}
    leftContent={null}
    rightContent={null}
  />
  <main
    className=""
  >
    <div
      className=""
    />
  </main>
</div>
`;

exports[`Main fullScreen = true renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(CssBaseline) />
  <WithStyles(Header)
    handleDrawerOpen={[Function]}
    hasSidebar={false}
    isSidebarOpen={false}
    leftContent={null}
    rightContent={null}
  />
  <main
    className="fullScreen"
  >
    <div
      className=""
    />
  </main>
</div>
`;

exports[`Main sidebar is defined renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(CssBaseline) />
  <WithStyles(Header)
    handleDrawerOpen={[Function]}
    hasSidebar={true}
    isSidebarOpen={false}
    leftContent={null}
    rightContent={null}
  />
  <WithStyles(Sidebar)
    handleDrawerClose={[Function]}
    isSidebarOpen={false}
  >
    <child>
      some child
    </child>
  </WithStyles(Sidebar)>
  <main
    className=""
  >
    <div
      className=""
    />
  </main>
</div>
`;
